[package]
name = "kvs"
version = "0.1.0"
authors = ["Divin Kong <divin@okayish.dev>"]
description = "A key-value store lab practice"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0"
tempfile = "3.0"
walkdir = "2.2"

[lib]
test = false
doctest = false
